fixed footer overlapping content

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,7 +18,10 @@ html {
     font-size: 1.6rem;
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
+    display: flex;
     min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .container {
@@ -160,10 +163,6 @@ html {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
     width: 100%;
     background-color: orangered;
     color: white;
